# area-selector

./: README.md  meson.build
src/: area-selector.gresource.xml  main.vala  meson.build  selector-window.ui  selector-window.vala
